--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ html {
 body {
   position: relative;
   margin: 0;
-  background-color: #57D9EE;
+  background-color: #57d9ee;
   overflow-x: hidden;
   font-family: fot-tsukuardgothic-std, sans-serif;
   font-style: normal;
@@ -79,7 +79,8 @@ a {
   }
 }
 @keyframes yurayura {
-  0%, 100% {
+  0%,
+  100% {
     transform: rotate(10deg);
   }
   50% {
@@ -87,7 +88,8 @@ a {
   }
 }
 @keyframes yurayurabig {
-  0%, 100% {
+  0%,
+  100% {
     transform: rotate(20deg);
   }
   50% {
@@ -100,6 +102,17 @@ a {
   }
   100% {
     transform: rotate(360deg) scale(1, 1);
+  }
+}
+@keyframes viewAllBtn {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 .ham {
@@ -136,7 +149,7 @@ a {
   position: relative;
   width: 90%;
   height: 70vh;
-  background-color: #FFF3D2;
+  background-color: #fff3d2;
 }
 .hammenu-bgimg01 {
   position: absolute;
@@ -195,11 +208,11 @@ a {
   display: flex;
   height: 72px;
   width: 72px;
-  background-color: #FFED00;
+  background-color: #ffed00;
   border: 4px solid #000;
   justify-content: center;
   align-items: center;
-  box-shadow: -15px 12px 0px #00FFE4;
+  box-shadow: -15px 12px 0px #00ffe4;
   z-index: 999; /*重ね順*/
 }
 .hambtn span {
@@ -288,7 +301,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #FFF3D2;
+    background-color: #fff3d2;
     border: 12px solid black;
     box-sizing: border-box;
     transition: all 0.5s;
@@ -311,7 +324,7 @@ a {
   margin-left: 20px;
 }
 .nav-menu li a {
-  text-decoration: underline #FF00C7;
+  text-decoration: underline #ff00c7;
   color: #000;
   font-size: 24px;
   font-weight: 600;
@@ -346,10 +359,11 @@ a {
 }
 @media screen and (min-width: 801px) {
   .fixed {
-    width: 94%;
+    width: 97%;
+    height: 150px;
     position: fixed;
     top: 3%;
-    left: 3%;
+    left: 1.5%;
     z-index: 100;
   }
 }
@@ -519,7 +533,7 @@ a {
   .fv-img3 {
     display: block;
     width: 15%;
-    top: 35%;
+    top: 30%;
     right: 10%;
     transform-origin: center;
     animation: yurayura 2s ease 0s infinite alternate;
@@ -610,8 +624,8 @@ a {
   padding: 20px;
   margin: 0 auto;
   margin-top: 60px;
-  background-color: #FFF3D2;
-  box-shadow: 15px 12px 0px #FDF150;
+  background-color: #fff3d2;
+  box-shadow: 15px 12px 0px #fdf150;
 }
 @media screen and (min-width: 801px) {
   .catch-box {
@@ -621,7 +635,7 @@ a {
     padding: 20px;
     padding-bottom: 90px;
     margin-top: 60px;
-    background-color: #FFF3D2;
+    background-color: #fff3d2;
     box-shadow: none;
   }
 }
@@ -768,8 +782,8 @@ a {
   padding: 20px;
   margin: 0 auto;
   margin-top: 60px;
-  background-color: #FFF3D2;
-  box-shadow: 15px 12px 0px #FDF150;
+  background-color: #fff3d2;
+  box-shadow: 15px 12px 0px #fdf150;
 }
 @media screen and (min-width: 801px) {
   .info-border {
@@ -778,7 +792,7 @@ a {
     border: 12px solid black;
     padding: 20px;
     margin-top: 60px;
-    background-color: #FFF3D2;
+    background-color: #fff3d2;
     box-shadow: none;
   }
 }
@@ -979,10 +993,10 @@ a {
   position: relative;
   padding: 20px;
   margin-top: 60px;
-  background-color: #FFF3D2;
+  background-color: #fff3d2;
   border: 12px solid #000;
   padding-bottom: 180px;
-  box-shadow: 15px 12px 0px #FDF150;
+  box-shadow: 15px 12px 0px #fdf150;
 }
 @media screen and (min-width: 801px) {
   .shop-box {
@@ -1158,7 +1172,7 @@ a {
   padding: 20px 5px; /* メニューに高さを付ける */
   text-align: center;
   margin-right: 6px;
-  background-color: #FCAA3B;
+  background-color: #fcaa3b;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
   cursor: pointer;
@@ -1173,7 +1187,7 @@ a {
 .shop .tab__menu-item.is-active {
   padding: 30px 5px; /* メニューに高さを付ける */
   color: #000;
-  background-color: #FFD355;
+  background-color: #ffd355;
   background-image: url(../img/tab-act.svg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -1186,7 +1200,7 @@ a {
 .shop .tab__panel-box {
   border: 5px solid #000;
   min-height: 400px; /* テキスト量が多くなっても対応できるように */
-  background-color: #FCAA3B;
+  background-color: #fcaa3b;
   padding-top: 30px;
   padding-bottom: 30px;
   border-bottom-left-radius: 10px;
@@ -1226,7 +1240,7 @@ a {
   .shop .groupposter-img {
     width: 45%;
     margin: auto;
-    box-shadow: 15px 12px 0px #9CFFF9;
+    box-shadow: 15px 12px 0px #9cfff9;
   }
 }
 .shop .groupposter-img img {
@@ -1242,7 +1256,7 @@ a {
   }
 }
 .shop .watch-btn {
-  background-color: #FF0000;
+  background-color: #ff0000;
   border: 4px solid black;
   position: absolute;
   bottom: -1%;
@@ -1252,7 +1266,7 @@ a {
 @media screen and (min-width: 801px) {
   .shop .watch-btn {
     border: none;
-    background-color: #FFF3D2;
+    background-color: #fff3d2;
     bottom: 0;
     right: 0;
   }
@@ -1266,7 +1280,13 @@ a {
   }
 }
 .shop .watch-btn div .btnbg {
+  position: relative;
+  top: 12px;
+  right: -12px;
   display: none;
+}
+.btnbg {
+  animation: viewAllBtn 1.5s infinite;
 }
 @media screen and (min-width: 801px) {
   .shop .watch-btn div .btnbg {
@@ -1277,6 +1297,12 @@ a {
 }
 .shop .watch-btn div .btnbg2 {
   width: 40%;
+}
+.btnbg2 {
+  animation: viewAllBtn 1.5s infinite;
+}
+.watch-btn p {
+  animation: viewAllBtn 1.5s infinite;
 }
 @media screen and (min-width: 801px) {
   .shop .watch-btn div .btnbg2 {
@@ -1294,8 +1320,8 @@ a {
 @media screen and (min-width: 801px) {
   .shop .watch-btn div p {
     position: absolute;
-    top: 40%;
-    right: 5%;
+    top: 45%;
+    right: 2%;
     font-size: 40px;
   }
 }
@@ -1327,7 +1353,7 @@ a {
   margin: 0 auto;
   border: 12px solid black;
   padding: 20px 20px 60px 20px;
-  background-color: #FFF466;
+  background-color: #fff466;
 }
 @media screen and (min-width: 801px) {
   .messege-box {
@@ -1470,7 +1496,7 @@ a {
   display: none;
   position: absolute;
   bottom: -30px;
-  right: 200px;
+  right: 170px;
   z-index: 2;
 }
 @media screen and (min-width: 801px) {
@@ -1521,16 +1547,16 @@ a {
 }
 @media screen and (min-width: 801px) {
   .messege-img img {
-    border: 8px solid #000;
+    border: 12px solid #000;
   }
 }
 .messege-text {
   position: relative;
   width: 90%;
   padding: 3%;
-  border: 5px solid black;
+  border: 12px solid black;
   z-index: 3;
-  background-color: #BAF5FF;
+  background-color: #baf5ff;
 }
 @media screen and (min-width: 801px) {
   .messege-text {
@@ -1591,7 +1617,7 @@ a {
   padding: 20px;
   padding-bottom: 100px;
   margin-top: 60px;
-  background-color: #FFF466;
+  background-color: #fff466;
 }
 @media screen and (min-width: 801px) {
   .poster-box {
@@ -1631,7 +1657,7 @@ a {
   width: 40%;
   position: absolute;
   left: -15%;
-  top: 12%;
+  top: 10%;
 }
 .poster-bgimg02 {
   display: none;
@@ -1730,6 +1756,7 @@ a {
   position: absolute;
   left: -20%;
   bottom: -13%;
+  z-index: 1;
 }
 .poster-bgimg07 {
   width: 20%;
@@ -1741,9 +1768,9 @@ a {
   position: relative;
   width: 90%;
   margin: 0 auto;
-  border: 5px solid black;
+  border: 12px solid black;
   padding: 3%;
-  background-color: #FFF3D2;
+  background-color: #fff3d2;
   z-index: 2;
 }
 @media screen and (min-width: 801px) {
@@ -1769,7 +1796,7 @@ a {
   padding: 20px;
   padding-bottom: 100px;
   margin-top: 60px;
-  background-color: #FFF466;
+  background-color: #fff466;
 }
 @media screen and (min-width: 801px) {
   .jumper-box {
@@ -1778,7 +1805,7 @@ a {
     padding: 20px;
     padding-bottom: 100px;
     margin-top: 60px;
-    background-color: #FFF466;
+    background-color: #fff466;
   }
 }
 @media screen and (min-width: 801px) {
@@ -1850,7 +1877,7 @@ a {
 @media screen and (min-width: 801px) {
   .jumper-bgimg01 {
     width: 20%;
-    top: 0;
+    top: 200px;
     bottom: auto;
   }
 }
@@ -1912,7 +1939,7 @@ a {
   padding: 20px;
   padding-bottom: 100px;
   margin-top: 60px;
-  background-color: #5AF1DF;
+  background-color: #5af1df;
 }
 @media screen and (min-width: 801px) {
   .event-box {
@@ -2021,15 +2048,15 @@ a {
   padding: 20px;
   padding-bottom: 100px;
   margin-top: 60px;
-  background-color: #FFF3D2;
+  background-color: #fff3d2;
   background-image: url(../img/PC-plan-bg.svg);
   background-size: cover;
-  border: 4px solid black;
+  border: 2px solid black;
 }
 @media screen and (min-width: 801px) {
   .schoolplan-box {
     width: auto;
-    border-bottom: 8px solid #000;
+    border-bottom: 12px solid #000;
   }
 }
 @media screen and (min-width: 801px) {
@@ -2069,7 +2096,7 @@ a {
   .schoolplan .rule {
     background-color: #fff;
     border: 12px solid #000;
-    box-shadow: -20px 15px 0px #AB00E8;
+    box-shadow: -20px 15px 0px #ab00e8;
   }
 }
 .schoolplan .rule-bgimg01 {
@@ -2080,7 +2107,7 @@ a {
     display: block;
     width: 20%;
     position: absolute;
-    top: -30%;
+    top: -35%;
   }
 }
 .schoolplan .rule-bgimg02 {
@@ -2116,6 +2143,7 @@ a {
   background-repeat: no-repeat;
   background-size: contain;
   padding-left: 5%;
+  padding-top: 5%;
 }
 .schoolplan-title {
   width: 70%;
@@ -2252,7 +2280,7 @@ a {
   border: 4px solid black;
   padding: 20px;
   margin-top: 60px;
-  background-color: #E9FFFE;
+  background-color: #e9fffe;
 }
 @media screen and (min-width: 801px) {
   .caveat-box {
@@ -2334,7 +2362,7 @@ a {
   border: 4px solid black;
   padding: 20px;
   margin-top: 60px;
-  background-color: #E9FFFE;
+  background-color: #e9fffe;
 }
 @media screen and (min-width: 801px) {
   .Infection-box {
@@ -2502,7 +2530,7 @@ a {
   margin: 0 auto;
   text-align: center;
   border: solid 8px;
-  background-color: #FFF3D2;
+  background-color: #fff3d2;
 }
 
 .tabs__ul {
@@ -2561,4 +2589,4 @@ a {
 .contentArea__textArea {
   width: 260px;
   margin: 0 auto;
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
